test/units/TypingSpec/valid/prog/untyped-lam-check-1.algst
double : Int -> Int
double = \i -> i * 2
