test/units/TypingSpec/invalid/types/abs-mismatch-type.algst
let f : () -> Int = \(i : Int) -> i in ()
